--- a/CodeCakeBuilder/CodeCakeBuilder.csproj
+++ b/CodeCakeBuilder/CodeCakeBuilder.csproj
@@ -13,7 +13,7 @@
   <ItemGroup>
     <PackageReference Include="NUnit.ConsoleRunner" Version="3.10.0" />
     <PackageReference Include="NUnit.Runners.Net4" Version="2.6.4" />
-    <PackageReference Include="SimpleGitVersion.Cake" Version="2.0.1" />
-    <PackageReference Include="CKSetup.Cake" Version="10.0.0-a00-00-0021-develop" />
+    <PackageReference Include="SimpleGitVersion.Cake" Version="2.1.0" />
+    <PackageReference Include="CKSetup.Cake" Version="11.1.2" />
   </ItemGroup>
 </Project>
