--- a/CK.Testing.StObjEngine/CK.Testing.StObjEngine.csproj
+++ b/CK.Testing.StObjEngine/CK.Testing.StObjEngine.csproj
@@ -6,6 +6,7 @@
   <PropertyGroup>
     <TargetFrameworks>netcoreapp3.1</TargetFrameworks>
     <Description>Extends CK.Testing.Monitoring TestHelper with methods that supports direct use of the StObjEngine (without the out-of-process CKSetup).</Description>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.StObj.Engine\CK.StObj.Engine.csproj" />
