--- a/CK.Testing.StObjMap/CK.Testing.StObjMap.csproj
+++ b/CK.Testing.StObjMap/CK.Testing.StObjMap.csproj
@@ -6,6 +6,7 @@
   <PropertyGroup>
     <TargetFrameworks>netcoreapp3.1</TargetFrameworks>
     <Description>Extends TestHelper to exploit generated assemblies (loading, deletion, obtaining a IServiceProvider with the AutomaticServices, etc.).</Description>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.StObj.Model\CK.StObj.Model.csproj" />
