--- a/CK.StObj.Engine/CK.StObj.Engine.csproj
+++ b/CK.StObj.Engine/CK.StObj.Engine.csproj
@@ -5,11 +5,11 @@
 
   <PropertyGroup>
     <TargetFrameworks>netcoreapp3.1;</TargetFrameworks>
-    <LangVersion>7.3</LangVersion>
     <Description>
       CK-Database helps to setup, construct, manages and build modular relationnal databases upon SqlServer.
       CK.StObj.Engine supports actual generation of StObj implementation.
     </Description>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.StObj.Runtime\CK.StObj.Runtime.csproj" />
