--- a/Common/CentralPackages.props
+++ b/Common/CentralPackages.props
@@ -3,15 +3,15 @@
     <PackageReference Update="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.3" />
     <!-- This implements concrete ServiceCollection and DI engine itself. This is required by CK.Testing.StObjMap and CK.Testing.StObjEngine. -->
     <PackageReference Update="Microsoft.Extensions.DependencyInjection" Version="3.1.3" />
-    <PackageReference Update="CK.Testing.Monitoring" Version="0.17.1--0006-develop" />
-    <PackageReference Update="CK.Testing.CKSetup" Version="11.2.1--0013-develop" />
-    <PackageReference Update="CK.ActivityMonitor.SimpleSender" Version="13.2.1--0005-develop" />
+    <PackageReference Update="CK.Testing.Monitoring" Version="0.18.0" />
+    <PackageReference Update="CK.Testing.CKSetup" Version="12.0.0" />
+    <PackageReference Update="CK.ActivityMonitor.SimpleSender" Version="13.3.0" />
     <PackageReference Update="CSemVer" Version="8.0.1" />
-    <PackageReference Update="CK.CodeGen.Roslyn" Version="0.14.1--0005-develop" />
-    <PackageReference Update="CK.CodeGen" Version="0.14.1--0005-develop" />
-    <PackageReference Update="CK.Reflection" Version="9.0.2--0003-develop" />
-    <PackageReference Update="CK.Setup.Dependency" Version="10.2.1--0006-develop" />
-    <PackageReference Update="CK.Core" Version="13.1.1--0005-develop" />
+    <PackageReference Update="CK.CodeGen.Roslyn" Version="0.15.0" />
+    <PackageReference Update="CK.CodeGen" Version="0.15.0" />
+    <PackageReference Update="CK.Reflection" Version="9.0.1" />
+    <PackageReference Update="CK.Setup.Dependency" Version="10.3.0" />
+    <PackageReference Update="CK.Core" Version="13.2.0" />
     <PackageReference Update="Microsoft.SourceLink.GitHub" Version="1.0.0" />
   </ItemGroup>
   <ItemGroup>
