--- a/Common/CentralPackages.props
+++ b/Common/CentralPackages.props
@@ -18,5 +18,6 @@
     <PackageReference Update="Microsoft.NET.Test.Sdk" Version="16.6.1" />
     <PackageReference Update="NUnit" Version="3.12.0" />
     <PackageReference Update="NUnit3TestAdapter" Version="3.16.1" />
+    <PackageReference Update="SmartAnalyzers.CSharpExtensions.Annotations" Version="2.2.44" />
   </ItemGroup>
 </Project>
