--- a/Tests/CK.StObj.Engine.Tests/CK.StObj.Engine.Tests.csproj
+++ b/Tests/CK.StObj.Engine.Tests/CK.StObj.Engine.Tests.csproj
@@ -6,13 +6,19 @@
   <PropertyGroup>
     <TargetFrameworks>netcoreapp3.1</TargetFrameworks>
     <IsPackable>false</IsPackable>
+    <Nullable>enable</Nullable>
     <GenerateDocumentationFile>false</GenerateDocumentationFile>
+    <SignAssembly>false</SignAssembly>
   </PropertyGroup>
   
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
     <PackageReference Include="NUnit" />
     <PackageReference Include="NUnit3TestAdapter" />
+  </ItemGroup>
+  <ItemGroup>
+    <!-- see https://cezarypiatek.github.io/post/immutable-types-with-roslyn/ -->
+    <PackageReference Include="SmartAnalyzers.CSharpExtensions.Annotations" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\CK.Testing.StObjEngine\CK.Testing.StObjEngine.csproj" />
