Yet another Huge refactoring...
- No more:
  -  ICodeGeneratorModule (Only the Engine now depends on Roslyn.)
  - DefaultGenerationNamespace (The IDynamicAssembly directly exposes
     the ICodeWorkspace)

- New AutoImplementationClaimAttribute and
  IAttributeAutoImplemented has been renamed into
  IAutoImplementationClaimAttribute: the "Claim" notion clearer.

- Poco now have names .
- There is one PocoFactory instance by Poco type (instead of the single
   combined implementation).
- New non generic IPocoFactory base interface (not a IRealObject).
- New PocoDirectory real object that enables to find the IPocoFactory
by its names.

--- a/CK.StObj.Engine/CK.StObj.Engine.csproj
+++ b/CK.StObj.Engine/CK.StObj.Engine.csproj
@@ -13,6 +13,7 @@ This is a SetupDependency of CK.StObj.Runtime (that is itself a SetuoDependency 
 
   <ItemGroup>
     <ProjectReference Include="..\CK.StObj.Runtime\CK.StObj.Runtime.csproj" />
+    <PackageReference Include="CK.CodeGen.Roslyn" />
     <PackageReference Include="CK.Core" />
   </ItemGroup>
   <ItemGroup>
