--- a/Tests/CK.StObj.Engine.Tests/CK.StObj.Engine.Tests.csproj
+++ b/Tests/CK.StObj.Engine.Tests/CK.StObj.Engine.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <Sdk Name="Microsoft.Build.CentralPackageVersions" Version="2.0.52" />
   <Import Project="..\..\Common\Shared.props" />
@@ -15,12 +15,14 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
     <PackageReference Include="NUnit" />
     <PackageReference Include="NUnit3TestAdapter" />
+    <!--<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" />-->
   </ItemGroup>
   <ItemGroup>
     <!-- see https://cezarypiatek.github.io/post/immutable-types-with-roslyn/ -->
     <PackageReference Include="SmartAnalyzers.CSharpExtensions.Annotations" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\CK.Poco.Json\CK.Poco.Json.csproj" />
     <ProjectReference Include="..\..\CK.Testing.StObjEngine\CK.Testing.StObjEngine.csproj" />
   </ItemGroup>
 </Project>
