Changed ".StObjGen" to "$StObjGen"
MSBuild excludes by default from compilation '.' folders.
"$StObjGen" folder is sorted at the top of the files.

--- a/.gitignore
+++ b/.gitignore
@@ -274,4 +274,4 @@ Tests/**/Logs/
 Tests/**/CKSetup-WorkingDir/
 CodeCakeBuilder/MemoryKey.*.txt
 CodeCakeBuilder/UnitTestsDone.*.txt
-.StObjGen/
+$StObjGen/
