Applied Settings(...) CI build: Upgrading dependencies:
NuGet:CK.Testing.Monitoring/0.18.1--0002-develop
NuGet:CK.Testing.CKSetup/12.0.2--0001-develop
NuGet:CK.Testing.Monitoring/0.18.1--0002-develop
NuGet:CK.CodeGen.Roslyn/0.15.1--0017-develop
NuGet:CK.Core/13.2.1--0001-develop
NuGet:CK.CodeGen/0.15.1--0017-develop
NuGet:CK.Reflection/9.0.2--0005-develop
NuGet:CK.Setup.Dependency/10.3.1--0001-develop
NuGet:CK.ActivityMonitor.SimpleSender/13.3.1--0001-develop.

--- a/Common/Shared.props
+++ b/Common/Shared.props
@@ -1,4 +1,4 @@
-<Project>
+﻿<Project>
   <!--<BasicDefinitions>: provides simple and useful definitions.-->
   <PropertyGroup>
     <!-- Simple IsTestProject and IsInTestsFolder variables. -->
@@ -38,7 +38,7 @@
   <!--</SourceLink>-->
   <!--<StandardProperties>-->
   <PropertyGroup>
-    <RepositoryUrl>https://github.com/signature-opensource/CK-StObj.git</RepositoryUrl>
+    <RepositoryUrl>https://github.com/signature-opensource/CK-StObj</RepositoryUrl>
     <ProductName>CK</ProductName>
     <Company>Signature Code</Company>
     <Authors>Signature Code</Authors>
