--- a/Common/CentralPackages.props
+++ b/Common/CentralPackages.props
@@ -1,20 +1,18 @@
 <Project>
   <ItemGroup>
     <PackageReference Update="System.Text.Json" Version="4.7.2" />
-    
     <PackageReference Update="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.5" />
     <!-- This implements concrete ServiceCollection and DI engine itself. This is required by CK.Testing.StObjMap and CK.Testing.StObjEngine. -->
     <PackageReference Update="Microsoft.Extensions.DependencyInjection" Version="3.1.5" />
-
-    <PackageReference Update="CK.Testing.Monitoring" Version="0.18.0" />
-    <PackageReference Update="CK.Testing.CKSetup" Version="12.0.1" />
-    <PackageReference Update="CK.ActivityMonitor.SimpleSender" Version="13.3.0" />
+    <PackageReference Update="CK.Testing.Monitoring" Version="0.18.1--0002-develop" />
+    <PackageReference Update="CK.Testing.CKSetup" Version="12.0.2--0001-develop" />
+    <PackageReference Update="CK.ActivityMonitor.SimpleSender" Version="13.3.1--0001-develop" />
     <PackageReference Update="CSemVer" Version="8.0.1" />
-    <PackageReference Update="CK.CodeGen.Roslyn" Version="0.15.1--0016-develop" />
-    <PackageReference Update="CK.CodeGen" Version="0.15.1--0016-develop" />
-    <PackageReference Update="CK.Reflection" Version="9.0.1" />
-    <PackageReference Update="CK.Setup.Dependency" Version="10.3.0" />
-    <PackageReference Update="CK.Core" Version="13.2.0" />
+    <PackageReference Update="CK.CodeGen.Roslyn" Version="0.15.1--0017-develop" />
+    <PackageReference Update="CK.CodeGen" Version="0.15.1--0017-develop" />
+    <PackageReference Update="CK.Reflection" Version="9.0.2--0005-develop" />
+    <PackageReference Update="CK.Setup.Dependency" Version="10.3.1--0001-develop" />
+    <PackageReference Update="CK.Core" Version="13.2.1--0001-develop" />
     <PackageReference Update="Microsoft.SourceLink.GitHub" Version="1.0.0" />
   </ItemGroup>
   <ItemGroup>
