--- a/Common/CentralPackages.props
+++ b/Common/CentralPackages.props
@@ -4,14 +4,14 @@
     <PackageReference Update="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.5" />
     <!-- This implements concrete ServiceCollection and DI engine itself. This is required by CK.Testing.StObjMap and CK.Testing.StObjEngine. -->
     <PackageReference Update="Microsoft.Extensions.DependencyInjection" Version="3.1.5" />
-    <PackageReference Update="CK.Testing.Monitoring" Version="0.0.0--02w93r1-local+v0.18.0" />
-    <PackageReference Update="CK.Testing.CKSetup" Version="0.0.0--02wlrv8-local+v12.0.1" />
-    <PackageReference Update="CK.ActivityMonitor.SimpleSender" Version="0.0.0--02w93qz-local+v13.3.0" />
+    <PackageReference Update="CK.Testing.Monitoring" Version="0.0.0--02wnn07-local+v0.18.0" />
+    <PackageReference Update="CK.Testing.CKSetup" Version="0.0.0--02wnn07-local+v12.0.1" />
+    <PackageReference Update="CK.ActivityMonitor.SimpleSender" Version="0.0.0--02wnj6e-local+v13.3.0" />
     <PackageReference Update="CSemVer" Version="8.0.1" />
-    <PackageReference Update="CK.CodeGen.Roslyn" Version="0.0.0--02wncjf-local+v0.15.0" />
-    <PackageReference Update="CK.CodeGen" Version="0.0.0--02wncjf-local+v0.15.0" />
+    <PackageReference Update="CK.CodeGen.Roslyn" Version="0.0.0--02wnn07-local+v0.15.0" />
+    <PackageReference Update="CK.CodeGen" Version="0.0.0--02wnn07-local+v0.15.0" />
     <PackageReference Update="CK.Reflection" Version="0.0.0--02w93qn-local+v9.0.1" />
-    <PackageReference Update="CK.Setup.Dependency" Version="0.0.0--02w93r2-local+v10.3.0" />
+    <PackageReference Update="CK.Setup.Dependency" Version="0.0.0--02wnn07-local+v10.3.0" />
     <PackageReference Update="CK.Core" Version="0.0.0--02w93qz-local+v13.2.0" />
     <PackageReference Update="Microsoft.SourceLink.GitHub" Version="1.0.0" />
   </ItemGroup>
