--- a/Common/CentralPackages.props
+++ b/Common/CentralPackages.props
@@ -8,8 +8,8 @@
     <PackageReference Update="CK.Testing.CKSetup" Version="0.0.0--02wnn07-local+v12.0.1" />
     <PackageReference Update="CK.ActivityMonitor.SimpleSender" Version="0.0.0--02wnj6e-local+v13.3.0" />
     <PackageReference Update="CSemVer" Version="8.0.1" />
-    <PackageReference Update="CK.CodeGen.Roslyn" Version="0.0.0--02wnn07-local+v0.15.0" />
-    <PackageReference Update="CK.CodeGen" Version="0.0.0--02wnn07-local+v0.15.0" />
+    <PackageReference Update="CK.CodeGen.Roslyn" Version="0.0.0--02wpazo-local+v0.15.0" />
+    <PackageReference Update="CK.CodeGen" Version="0.0.0--02wpazo-local+v0.15.0" />
     <PackageReference Update="CK.Reflection" Version="0.0.0--02w93qn-local+v9.0.1" />
     <PackageReference Update="CK.Setup.Dependency" Version="0.0.0--02wnn07-local+v10.3.0" />
     <PackageReference Update="CK.Core" Version="0.0.0--02w93qz-local+v13.2.0" />
