--- a/Common/CentralPackages.props
+++ b/Common/CentralPackages.props
@@ -4,15 +4,15 @@
     <PackageReference Update="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.10" />
     <!-- This implements concrete ServiceCollection and DI engine itself. This is required by CK.Testing.StObjMap and CK.Testing.StObjEngine. -->
     <PackageReference Update="Microsoft.Extensions.DependencyInjection" Version="3.1.10" />
-    <PackageReference Update="CK.Testing.Monitoring" Version="0.18.1--0025-develop" />
-    <PackageReference Update="CK.Testing.CKSetup" Version="12.0.3--0047-develop" />
-    <PackageReference Update="CK.ActivityMonitor.SimpleSender" Version="13.3.1--0018-develop" />
+    <PackageReference Update="CK.Testing.Monitoring" Version="1.0.0" />
+    <PackageReference Update="CK.Testing.CKSetup" Version="13.0.0" />
+    <PackageReference Update="CK.ActivityMonitor.SimpleSender" Version="13.3.1" />
     <PackageReference Update="CSemVer" Version="9.0.4" />
-    <PackageReference Update="CK.CodeGen.Roslyn" Version="0.15.1--0053-develop" />
-    <PackageReference Update="CK.CodeGen" Version="0.15.1--0053-develop" />
-    <PackageReference Update="CK.Reflection" Version="9.0.2--0012-develop" />
-    <PackageReference Update="CK.Setup.Dependency" Version="10.3.1--0016-develop" />
-    <PackageReference Update="CK.Core" Version="13.2.1--0015-develop" />
+    <PackageReference Update="CK.CodeGen.Roslyn" Version="1.0.0" />
+    <PackageReference Update="CK.CodeGen" Version="1.0.0" />
+    <PackageReference Update="CK.Reflection" Version="9.0.2" />
+    <PackageReference Update="CK.Setup.Dependency" Version="10.3.1" />
+    <PackageReference Update="CK.Core" Version="13.2.1" />
     <PackageReference Update="Microsoft.SourceLink.GitHub" Version="1.0.0" />
   </ItemGroup>
   <ItemGroup>
