--- a/Common/CentralPackages.props
+++ b/Common/CentralPackages.props
@@ -9,7 +9,7 @@
     <PackageReference Update="CK.ActivityMonitor.SimpleSender" Version="14.0.0" />
     <PackageReference Update="CSemVer" Version="9.0.4" />
     <PackageReference Update="CK.CodeGen.Roslyn" Version="2.0.0" />
-    <PackageReference Update="CK.CodeGen" Version="2.0.0" />
+    <PackageReference Update="CK.CodeGen" Version="2.0.1--0001-develop" />
     <PackageReference Update="CK.Reflection" Version="9.0.2" />
     <PackageReference Update="CK.Setup.Dependency" Version="11.0.0" />
     <PackageReference Update="CK.Core" Version="14.0.0" />
