No more AutoInstantiated & HasDeclaredSetter.
IsReadOnly is simpler and more strongly defined.

--- a/Tests/CK.StObj.Engine.Tests/CK.StObj.Engine.Tests.csproj
+++ b/Tests/CK.StObj.Engine.Tests/CK.StObj.Engine.Tests.csproj
@@ -26,4 +26,7 @@
     <ProjectReference Include="..\..\CK.Poco.Json\CK.Poco.Json.csproj" />
     <ProjectReference Include="..\..\CK.Testing.StObjEngine\CK.Testing.StObjEngine.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="%24StObjGen\" />
+  </ItemGroup>
 </Project>
