Applied settings(...) WIP

--- a/.editorconfig
+++ b/.editorconfig
@@ -68,4 +68,8 @@ dotnet_diagnostic.CA1034.severity = none
 dotnet_diagnostic.CA1040.severity = none
 # Motive: Empty interfaces are "interface markers" and are very useful.
 
+# CA1508: Avoid dead conditional code
+dotnet_diagnostic.CA1508.severity = none
+# Motive: Too much false positive: if you follow the suggestion you will remove useful code!
+
 # /Signature-Code .editorconfig
