--- a/Common/Shared.props
+++ b/Common/Shared.props
@@ -1,11 +1,11 @@
-<Project>
+﻿<Project>
 
   <!-- See https://docs.microsoft.com/en-us/dotnet/standard/base-types/string-comparison-net-5-plus -->
   <PropertyGroup>
     <AnalysisMode>AllEnabledByDefault</AnalysisMode>
     <WarningsAsErrors>$(WarningsAsErrors);CA1307;CA1309;CA1310</WarningsAsErrors>
   </PropertyGroup>
-  
+
   <!--<BasicDefinitions>: provides simple and useful definitions.-->
   <PropertyGroup>
     <!-- Simple IsTestProject and IsInTestsFolder variables. -->
