--- a/Common/CentralPackages.props
+++ b/Common/CentralPackages.props
@@ -14,6 +14,7 @@
     <PackageReference Update="CK.Setup.Dependency" Version="11.2.0" />
     <PackageReference Update="CK.Core" Version="14.2.0" />
     <PackageReference Update="Microsoft.SourceLink.GitHub" Version="1.0.0" />
+    <PackageReference Update="Microsoft.VisualStudio.Threading.Analyzers" Version="16.9.60" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Update="Microsoft.NET.Test.Sdk" Version="16.8.3" />
