--- a/Common/CentralPackages.props
+++ b/Common/CentralPackages.props
@@ -4,15 +4,15 @@
     <PackageReference Update="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.10" />
     <!-- This implements concrete ServiceCollection and DI engine itself. This is required by CK.Testing.StObjMap and CK.Testing.StObjEngine. -->
     <PackageReference Update="Microsoft.Extensions.DependencyInjection" Version="3.1.10" />
-    <PackageReference Update="CK.Testing.Monitoring" Version="2.2.0" />
-    <PackageReference Update="CK.Testing.CKSetup" Version="14.2.0" />
-    <PackageReference Update="CK.ActivityMonitor.SimpleSender" Version="14.2.0" />
+    <PackageReference Update="CK.Testing.Monitoring" Version="2.2.1--0002-develop" />
+    <PackageReference Update="CK.Testing.CKSetup" Version="14.2.1--0003-develop" />
+    <PackageReference Update="CK.ActivityMonitor.SimpleSender" Version="14.2.1--0003-develop" />
     <PackageReference Update="CSemVer" Version="9.1.0" />
-    <PackageReference Update="CK.CodeGen.Roslyn" Version="3.0.0" />
-    <PackageReference Update="CK.CodeGen" Version="3.0.0" />
-    <PackageReference Update="CK.Reflection" Version="9.0.2" />
-    <PackageReference Update="CK.Setup.Dependency" Version="11.2.0" />
-    <PackageReference Update="CK.Core" Version="14.2.0" />
+    <PackageReference Update="CK.CodeGen.Roslyn" Version="3.0.1--0002-develop" />
+    <PackageReference Update="CK.CodeGen" Version="3.0.1--0002-develop" />
+    <PackageReference Update="CK.Reflection" Version="9.0.3--0005-develop" />
+    <PackageReference Update="CK.Setup.Dependency" Version="11.2.1--0002-develop" />
+    <PackageReference Update="CK.Core" Version="14.2.1--0003-develop" />
     <PackageReference Update="Microsoft.SourceLink.GitHub" Version="1.0.0" />
     <PackageReference Update="Microsoft.VisualStudio.Threading.Analyzers" Version="16.9.60" />
   </ItemGroup>
