Split Well Known Services source.
Removed SmartAnalyzers.CSharpExtensions.Annotations.

--- a/Tests/CK.StObj.Engine.Tests/CK.StObj.Engine.Tests.csproj
+++ b/Tests/CK.StObj.Engine.Tests/CK.StObj.Engine.Tests.csproj
@@ -20,14 +20,12 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
     <PackageReference Include="NUnit" />
     <PackageReference Include="NUnit3TestAdapter" />
-    <!--<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" />-->
-  </ItemGroup>
-  <ItemGroup>
-    <!-- see https://cezarypiatek.github.io/post/immutable-types-with-roslyn/ -->
-    <PackageReference Include="SmartAnalyzers.CSharpExtensions.Annotations" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\CK.Poco.Json\CK.Poco.Json.csproj" />
     <ProjectReference Include="..\..\CK.Testing.StObjEngine\CK.Testing.StObjEngine.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Logs\" />
   </ItemGroup>
 </Project>
