--- a/Common/CentralPackages.props
+++ b/Common/CentralPackages.props
@@ -1,9 +1,12 @@
 <Project>
   <ItemGroup>
     <PackageReference Update="System.Text.Json" Version="4.7.2" />
-    <PackageReference Update="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.10" />
+    <PackageReference Update="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.19" />
     <!-- This implements concrete ServiceCollection and DI engine itself. This is required by CK.Testing.StObjMap and CK.Testing.StObjEngine. -->
-    <PackageReference Update="Microsoft.Extensions.DependencyInjection" Version="3.1.10" />
+    <PackageReference Update="Microsoft.Extensions.DependencyInjection" Version="3.1.19" />
+    <!-- This is for CK.StObj.Hosting. -->
+    <PackageReference Update="Microsoft.Extensions.Hosting.Abstractions" Version="3.1.19" />
+
     <PackageReference Update="CK.Testing.Monitoring" Version="2.2.1--0002-develop" />
     <PackageReference Update="CK.Testing.CKSetup" Version="14.2.1--0003-develop" />
     <PackageReference Update="CK.ActivityMonitor.SimpleSender" Version="14.2.1--0003-develop" />
@@ -20,6 +23,5 @@
     <PackageReference Update="Microsoft.NET.Test.Sdk" Version="16.8.3" />
     <PackageReference Update="NUnit" Version="3.12.0" />
     <PackageReference Update="NUnit3TestAdapter" Version="3.17.0" />
-    <PackageReference Update="SmartAnalyzers.CSharpExtensions.Annotations" Version="2.2.44" />
   </ItemGroup>
 </Project>
