OnHostStart/Stop[Async] support is now integrated.
This is more consistent: with a separate assembly, one may
still define private OnHostStart/Stop[Async] and without the
CK.CK.StObj.Hosting package this would have silently failed.

The new support now handles OnHostStart/Stop[Async] methods
AND generates a code that uses Microsoft.Extensions.Hosting.IHostedService:
if the built solution doesn't reference Microsoft.Extensions.Hosting.Abstractions
then an error is is raised:
- CK.StObj.Model is the same as before.
- Using OnHostStart/Stop[Async] methods requires the Microsoft.Extensions.Hosting.Abstractions
package to be referenced: there cannot be any silent failure.

--- a/Tests/CK.StObj.Engine.Tests/CK.StObj.Engine.Tests.csproj
+++ b/Tests/CK.StObj.Engine.Tests/CK.StObj.Engine.Tests.csproj
@@ -26,6 +26,10 @@
     <ProjectReference Include="..\..\CK.Testing.StObjEngine\CK.Testing.StObjEngine.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <!-- This is required for HostedServiceLifetimeTriggerTests: OnHostStart/Stop[Async] support. -->
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" />
+  </ItemGroup>
+  <ItemGroup>
     <Folder Include="Logs\" />
   </ItemGroup>
 </Project>
