--- a/CK.Testing.StObjSetup/CK.Testing.StObjSetup.csproj
+++ b/CK.Testing.StObjSetup/CK.Testing.StObjSetup.csproj
@@ -5,7 +5,7 @@
 
   <PropertyGroup>
     <TargetFrameworks>netcoreapp3.1</TargetFrameworks>
-    <Description>Extends CK.Testing.StObjMap TestHelper to rebuild/compile generated assemblies thanks to CK.Testing.CKSetup.</Description>
+    <Description>Extends CK.Testing.StObjMap and CK.Testing.CKSetup TestHelper to generate and expose compiled StObjMap using out-of-process run of CKSetup.</Description>
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
