--- a/CK.StObj.Runtime/CK.StObj.Runtime.csproj
+++ b/CK.StObj.Runtime/CK.StObj.Runtime.csproj
@@ -1,10 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <Sdk Name="Microsoft.Build.CentralPackageVersions" Version="2.0.52" />
   <Import Project="..\Common\Shared.props" />
-
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp3.1;</TargetFrameworks>
+    <TargetFramework>net6.0</TargetFramework>
     <Description>Façade for the CK.StObj.Engine that handles StObj implementation, Automatic DI resolution and Source Code generation.
 This is a SetupDependency of CK.StObj.Model that is dynamically resolved by CKSetup.
     </Description>
