--- a/Tests/CK.StObj.Engine.Tests/CK.StObj.Engine.Tests.csproj
+++ b/Tests/CK.StObj.Engine.Tests/CK.StObj.Engine.Tests.csproj
@@ -1,21 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <Sdk Name="Microsoft.Build.CentralPackageVersions" Version="2.0.52" />
   <Import Project="..\..\Common\Shared.props" />
-  
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp3.1</TargetFrameworks>
+    <TargetFramework>net6.0</TargetFramework>
     <IsPackable>false</IsPackable>
     <Nullable>enable</Nullable>
     <GenerateDocumentationFile>false</GenerateDocumentationFile>
     <SignAssembly>false</SignAssembly>
   </PropertyGroup>
-  
   <ItemGroup>
     <Compile Remove="%24StObjGen\G0-protected.cs" />
   </ItemGroup>
-  
-  
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
     <PackageReference Include="NUnit" />
