--- a/Common/CentralPackages.props
+++ b/Common/CentralPackages.props
@@ -6,15 +6,15 @@
     <PackageReference Update="Microsoft.Extensions.DependencyInjection" Version="3.1.19" />
     <!-- This is for CK.StObj.Hosting. -->
     <PackageReference Update="Microsoft.Extensions.Hosting.Abstractions" Version="3.1.19" />
-    <PackageReference Update="CK.Testing.Monitoring" Version="0.0.0--03lvf2p-local" />
-    <PackageReference Update="CK.Testing.CKSetup" Version="0.0.0--03lvf2p-local" />
-    <PackageReference Update="CK.ActivityMonitor.SimpleSender" Version="0.0.0--03lt16l-local+v15.0.0-a01" />
+    <PackageReference Update="CK.Testing.Monitoring" Version="0.0.0--03lvnn5-local" />
+    <PackageReference Update="CK.Testing.CKSetup" Version="0.0.0--03lvwyf-local" />
+    <PackageReference Update="CK.ActivityMonitor.SimpleSender" Version="0.0.0--03lvnn5-local+v15.0.0-a01" />
     <PackageReference Update="CSemVer" Version="9.1.0" />
-    <PackageReference Update="CK.CodeGen.Roslyn" Version="0.0.0--03lvf2p-local" />
-    <PackageReference Update="CK.CodeGen" Version="0.0.0--03lvf2p-local" />
+    <PackageReference Update="CK.CodeGen.Roslyn" Version="0.0.0--03lvvgn-local" />
+    <PackageReference Update="CK.CodeGen" Version="0.0.0--03lvvgn-local" />
     <PackageReference Update="CK.Reflection" Version="0.0.0--03lt15n-local" />
-    <PackageReference Update="CK.Setup.Dependency" Version="0.0.0--03lvf2p-local" />
-    <PackageReference Update="CK.Core" Version="0.0.0--03lveus-local+v15.0.0-a01" />
+    <PackageReference Update="CK.Setup.Dependency" Version="0.0.0--03lvnn6-local" />
+    <PackageReference Update="CK.Core" Version="0.0.0--03lvkz3-local+v15.0.0-a01" />
     <PackageReference Update="Microsoft.SourceLink.GitHub" Version="1.0.0" />
     <PackageReference Update="Microsoft.VisualStudio.Threading.Analyzers" Version="17.0.64" />
   </ItemGroup>
