--- a/Common/CentralPackages.props
+++ b/Common/CentralPackages.props
@@ -6,14 +6,14 @@
     <PackageReference Update="Microsoft.Extensions.DependencyInjection" Version="3.1.19" />
     <!-- This is for CK.StObj.Hosting. -->
     <PackageReference Update="Microsoft.Extensions.Hosting.Abstractions" Version="3.1.19" />
-    <PackageReference Update="CK.Testing.Monitoring" Version="0.0.0--03lx6ci-develop" />
-    <PackageReference Update="CK.Testing.CKSetup" Version="0.0.0--03lx6cj-develop" />
+    <PackageReference Update="CK.Testing.Monitoring" Version="0.0.0--03lxewx-develop" />
+    <PackageReference Update="CK.Testing.CKSetup" Version="0.0.0--03lxewy-develop" />
     <PackageReference Update="CK.ActivityMonitor.SimpleSender" Version="15.0.0-a01-00-0005-develop" />
     <PackageReference Update="CSemVer" Version="9.1.0" />
-    <PackageReference Update="CK.CodeGen.Roslyn" Version="0.0.0--03lx6ci-develop" />
-    <PackageReference Update="CK.CodeGen" Version="0.0.0--03lx6ci-develop" />
-    <PackageReference Update="CK.Reflection" Version="0.0.0--03lx6ak-develop" />
-    <PackageReference Update="CK.Setup.Dependency" Version="0.0.0--03lx6cj-develop" />
+    <PackageReference Update="CK.CodeGen.Roslyn" Version="0.0.0--03lxewx-develop" />
+    <PackageReference Update="CK.CodeGen" Version="0.0.0--03lxewx-develop" />
+    <PackageReference Update="CK.Reflection" Version="9.0.3--0011-develop" />
+    <PackageReference Update="CK.Setup.Dependency" Version="0.0.0--03lxewy-develop" />
     <PackageReference Update="CK.Core" Version="15.0.0-a01-00-0006-develop" />
     <PackageReference Update="Microsoft.SourceLink.GitHub" Version="1.0.0" />
     <PackageReference Update="Microsoft.VisualStudio.Threading.Analyzers" Version="17.0.64" />
