--- a/Common/CentralPackages.props
+++ b/Common/CentralPackages.props
@@ -6,15 +6,15 @@
     <PackageReference Update="Microsoft.Extensions.DependencyInjection" Version="3.1.19" />
     <!-- This is for CK.StObj.Hosting. -->
     <PackageReference Update="Microsoft.Extensions.Hosting.Abstractions" Version="3.1.19" />
-    <PackageReference Update="CK.Testing.Monitoring" Version="0.0.0--03m7ux3-local+v3.0.0-a" />
-    <PackageReference Update="CK.Testing.CKSetup" Version="0.0.0--03m7ux4-local+v15.0.0-a" />
-    <PackageReference Update="CK.ActivityMonitor.SimpleSender" Version="0.0.0--03m7ux1-local+v15.0.0-a02" />
+    <PackageReference Update="CK.Testing.Monitoring" Version="3.0.0-a00-00-0004-develop" />
+    <PackageReference Update="CK.Testing.CKSetup" Version="15.0.0-a00-00-0004-develop" />
+    <PackageReference Update="CK.ActivityMonitor.SimpleSender" Version="15.0.0-a02-00-0007-develop" />
     <PackageReference Update="CSemVer" Version="9.1.0" />
-    <PackageReference Update="CK.CodeGen.Roslyn" Version="0.0.0--03m7ux3-local+v4.0.0-a" />
-    <PackageReference Update="CK.CodeGen" Version="0.0.0--03m7ux3-local+v4.0.0-a" />
-    <PackageReference Update="CK.Reflection" Version="0.0.0--03m5xm9-local+v9.0.2" />
-    <PackageReference Update="CK.Setup.Dependency" Version="0.0.0--03m7ux5-local+v12.0.0-a" />
-    <PackageReference Update="CK.Core" Version="0.0.0--03m7ubt-local+v15.0.0-a02" />
+    <PackageReference Update="CK.CodeGen.Roslyn" Version="4.0.0-a00-00-0006-develop" />
+    <PackageReference Update="CK.CodeGen" Version="4.0.0-a00-00-0006-develop" />
+    <PackageReference Update="CK.Reflection" Version="9.0.3--0013-develop" />
+    <PackageReference Update="CK.Setup.Dependency" Version="12.0.0-a00-00-0004-develop" />
+    <PackageReference Update="CK.Core" Version="15.0.0-a02-00-0009-develop" />
     <PackageReference Update="Microsoft.SourceLink.GitHub" Version="1.0.0" />
     <PackageReference Update="Microsoft.VisualStudio.Threading.Analyzers" Version="17.0.64" />
   </ItemGroup>
