--- a/CodeCakeBuilder/CodeCakeBuilder.csproj
+++ b/CodeCakeBuilder/CodeCakeBuilder.csproj
@@ -13,9 +13,9 @@
     <PackageReference Include="NuGet.Credentials" Version="6.0.0" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="NUnit.ConsoleRunner" Version="3.11.1" />
+    <PackageReference Include="NUnit.ConsoleRunner" Version="3.13.0" />
     <PackageReference Include="NUnit.Runners.Net4" Version="2.6.4" />
-    <PackageReference Include="SimpleGitVersion.Cake" Version="6.0.0-r" />
+    <PackageReference Include="SimpleGitVersion.Cake" Version="6.0.0" />
     <PackageReference Include="CKSetup.Cake" Version="14.1.0" />
   </ItemGroup>
 </Project>
