List/Dic/HashSet instead of IList/IDic/ISet.

--- a/Tests/CK.StObj.Engine.Tests/CK.StObj.Engine.Tests.csproj
+++ b/Tests/CK.StObj.Engine.Tests/CK.StObj.Engine.Tests.csproj
@@ -25,6 +25,7 @@
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="%24StObjGen\" />
     <Folder Include="Logs\" />
   </ItemGroup>
 </Project>
