--- a/CK.StObj.Runtime/CK.StObj.Runtime.csproj
+++ b/CK.StObj.Runtime/CK.StObj.Runtime.csproj
@@ -1,5 +1,4 @@
 <Project Sdk="Microsoft.NET.Sdk">
-  <Sdk Name="Microsoft.Build.CentralPackageVersions" Version="2.0.52" />
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Description>Facade for the CK.StObj.Engine that handles StObj implementation, Automatic DI resolution and Source Code generation.
@@ -10,9 +9,9 @@ This is a SetupDependency of CK.StObj.Model that is dynamically resolved by CKSe
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.StObj.Model\CK.StObj.Model.csproj" />
-    <PackageReference Include="CK.CodeGen" />
-    <PackageReference Include="CK.Reflection" />
-    <PackageReference Include="CK.Setup.Dependency" />
+    <PackageReference Include="CK.CodeGen" Version="4.0.0-r08" />
+    <PackageReference Include="CK.Reflection" Version="9.0.2" />
+    <PackageReference Include="CK.Setup.Dependency" Version="12.0.0-r08" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
