Added targets for transitive dependencies to delete the signature key on build.

--- a/CK.StObj.Model/CK.StObj.Model.csproj
+++ b/CK.StObj.Model/CK.StObj.Model.csproj
@@ -14,4 +14,12 @@ Main Types are: IAutoService, IRealObject, IPoco, CKTypeDefinerAttributes, IStOb
   <ItemGroup>
     <Folder Include="Properties\" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="CK.StObj.Model.targets">
+		<Pack>true</Pack>
+		<PackagePath>buildTransitive\CK.StObj.Model.targets</PackagePath>
+    </Content>
+  </ItemGroup>
+
 </Project>
