CI build: Upgrading dependencies:
NuGet:CK.Testing.Monitoring/3.0.1--0002-develop
NuGet:CK.Testing.CKSetup/15.0.1--0003-develop
NuGet:CK.Testing.Monitoring/3.0.1--0002-develop
NuGet:CK.CodeGen.Roslyn/4.0.1--0002-develop
NuGet:CK.Core/15.0.1--0002-develop
NuGet:CK.CodeGen/4.0.1--0002-develop
NuGet:CK.Reflection/9.0.3--0029-develop
NuGet:CK.Setup.Dependency/12.0.1--0002-develop
NuGet:CK.ActivityMonitor.SimpleSender/15.0.1--0002-develop.

--- a/CK.Testing.StObjSetup/CK.Testing.StObjSetup.csproj
+++ b/CK.Testing.StObjSetup/CK.Testing.StObjSetup.csproj
@@ -6,6 +6,6 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.Testing.StObjMap\CK.Testing.StObjMap.csproj" />
-    <PackageReference Include="CK.Testing.CKSetup" Version="15.0.0" />
+    <PackageReference Include="CK.Testing.CKSetup" Version="15.0.1--0003-develop" />
   </ItemGroup>
 </Project>
