--- a/CK.StObj.Model/CK.StObj.Model.csproj
+++ b/CK.StObj.Model/CK.StObj.Model.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFrameworks>net6.0</TargetFrameworks>
     <Nullable>enable</Nullable>
-    <Description>Minimalist model with attributes, interfaces and basic objects that define StObj (Real Objects), Automatic DI configuration and enables Source Code Generation across multiple projects.
-Main Types are: IAutoService, IRealObject, IPoco, CKTypeDefinerAttributes, IStObjMap, StObjContextRoot.
+    <Description>
+      Minimalist model with attributes, interfaces and basic objects that define StObj (Real Objects), Automatic DI configuration and enables Source Code Generation across multiple projects.
+      Main Types are: IAutoService, IRealObject, IPoco, CKTypeDefinerAttributes, IStObjMap, StObjContextRoot.
     </Description>
   </PropertyGroup>
   <ItemGroup>
@@ -17,8 +18,8 @@ Main Types are: IAutoService, IRealObject, IPoco, CKTypeDefinerAttributes, IStOb
 
   <ItemGroup>
     <Content Include="CK.StObj.Model.targets">
-		<Pack>true</Pack>
-		<PackagePath>buildTransitive\CK.StObj.Model.targets</PackagePath>
+      <Pack>true</Pack>
+      <PackagePath>buildTransitive\CK.StObj.Model.targets</PackagePath>
     </Content>
   </ItemGroup>
 
