--- a/CK.StObj.Model/CK.StObj.Model.targets
+++ b/CK.StObj.Model/CK.StObj.Model.targets
@@ -1,13 +1,14 @@
 <Project>
-   
-  <Target Name="DeleteCKodeGenSignatureFiles" AfterTargets="CoreBuild">
+
+  <Target Name="DeleteCKStObjAutoAssemblyFiles" AfterTargets="CoreBuild">
     <ItemGroup>
-      <FilesToDelete Include="$(OutDir)*.dll.ckode-gen-signature.txt"/>
+      <FilesToDelete Include="$(OutDir)CK.StObj.AutoAssembly.dll"/>
+      <FilesToDelete Include="$(OutDir)CK.StObj.AutoAssembly.*.dll"/>
     </ItemGroup>
     <Delete Files="@(FilesToDelete)" >
       <Output TaskParameter="DeletedFiles" ItemName="DeletedList"/>
     </Delete>
-    <Message Text="Deleted signature files: '@(DeletedList)'"/>
+    <Message Importance="high" Text="Deleted generated files: '@(DeletedList)'"/>
   </Target>
-  
+
 </Project>
