CI build: Upgrading dependencies:
NuGet:CK.Testing.Monitoring/3.0.1--0003-develop
NuGet:CK.Testing.CKSetup/15.0.1--0006-develop
NuGet:CK.Testing.Monitoring/3.0.1--0003-develop
NuGet:CK.CodeGen.Roslyn/4.0.1--0003-develop
NuGet:CK.Core/15.0.1--0005-develop
NuGet:CK.CodeGen/4.0.1--0003-develop
NuGet:CK.Reflection/9.0.3--0029-develop
NuGet:CK.Setup.Dependency/12.0.1--0003-develop
NuGet:CK.ActivityMonitor.SimpleSender/15.0.1--0003-develop.

--- a/CK.StObj.Model/CK.StObj.Model.csproj
+++ b/CK.StObj.Model/CK.StObj.Model.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFrameworks>net6.0</TargetFrameworks>
     <Nullable>enable</Nullable>
@@ -9,18 +9,16 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="CSemVer" Version="11.0.0" />
-    <PackageReference Include="CK.ActivityMonitor.SimpleSender" Version="15.0.1--0002-develop" />
+    <PackageReference Include="CK.ActivityMonitor.SimpleSender" Version="15.0.1--0003-develop" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
   </ItemGroup>
-
   <ItemGroup>
     <Content Include="CK.StObj.Model.targets">
       <Pack>true</Pack>
       <PackagePath>buildTransitive\CK.StObj.Model.targets</PackagePath>
     </Content>
   </ItemGroup>
-
 </Project>
