Added mapping from IPoco type to factory.
IPocoFactory now also exposes the IPoco Interfaces it implements.

--- a/Tests/StObjSetupTesting/Tests/LibWithSampleModel.Tests/LibWithSampleModel.Tests.csproj
+++ b/Tests/StObjSetupTesting/Tests/LibWithSampleModel.Tests/LibWithSampleModel.Tests.csproj
@@ -25,4 +25,8 @@
     -->
     <ProjectReference Include="..\..\..\StObjEngineTesting\Tests\Sample.Engine.Tests\Sample.Engine.Tests.csproj" ReferenceOutputAssembly="false" Private="false" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="%24StObjGen\" />
+  </ItemGroup>
 </Project>
