--- a/Tests/StObjEngineTesting/Tests/Sample.Engine.Tests/Sample.Engine.Tests.csproj
+++ b/Tests/StObjEngineTesting/Tests/Sample.Engine.Tests/Sample.Engine.Tests.csproj
@@ -15,4 +15,8 @@
     <PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="%24StObjGen\" />
+  </ItemGroup>
+
 </Project>
