CI build: Upgrading dependencies:
NuGet:CK.Testing.Monitoring/3.0.1--0014-develop
NuGet:CK.Testing.CKSetup/15.0.1--0024-develop
NuGet:CK.Testing.Monitoring/3.0.1--0014-develop
NuGet:CK.CodeGen.Roslyn/4.0.1--0012-develop
NuGet:CK.Core/15.0.1--0006-develop
NuGet:CK.CodeGen/4.0.1--0012-develop
NuGet:CK.Reflection/9.0.3--0030-develop
NuGet:CK.Setup.Dependency/12.0.1--0011-develop
NuGet:CK.ActivityMonitor.SimpleSender/15.0.1--0005-develop.

--- a/CK.StObj.Model/CK.StObj.Model.csproj
+++ b/CK.StObj.Model/CK.StObj.Model.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFrameworks>net6.0</TargetFrameworks>
     <Nullable>enable</Nullable>
@@ -9,14 +9,12 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="CSemVer" Version="11.0.0" />
-    <PackageReference Include="CK.ActivityMonitor.SimpleSender" Version="15.0.1--0003-develop" />
+    <PackageReference Include="CK.ActivityMonitor.SimpleSender" Version="15.0.1--0005-develop" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
   </ItemGroup>
-
   <PropertyGroup>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
-
   <ItemGroup>
     <Content Include="MSBuild/CK.StObj.Model.props">
       <Pack>true</Pack>
@@ -27,5 +25,4 @@
       <PackagePath>buildTransitive\CK.StObj.Model.targets</PackagePath>
     </Content>
   </ItemGroup>
-
 </Project>
