--- a/.gitignore
+++ b/.gitignore
@@ -278,3 +278,4 @@ CodeCakeBuilder/[Rr]elease/
 CodeCakeBuilder/[Rr]eleases/
 /Tests/StObjSetupTesting/Tests/LocalSolutionStore/
 /Tests/StObjSetupTesting/Tests/LibWithSampleModel.Tests/LocalSolutionStore/
+/Tests/StObjSetupTesting/Tests/LibWithSampleModel.Tests/LocalStores/
