--- a/Tests/StObjSetupTesting/Tests/TestHelper.config
+++ b/Tests/StObjSetupTesting/Tests/TestHelper.config
@@ -7,11 +7,11 @@
             <ProjectReference Include="..\..\..\StObjEngineTesting\Tests\Sample.Engine.Tests\Sample.Engine.Tests.csproj" ReferenceOutputAssembly="false" Private="false" />
       -->
       <add key="CKSetup/AutoRegisterLocalComponentPaths"
-           value="{SolutionFolder}/CK.StObj.Model/bin/{BuildConfiguration}/net6.0;
-                  {SolutionFolder}/CK.StObj.Runtime/bin/{BuildConfiguration}/net6.0;
-                  {SolutionFolder}/CK.StObj.Engine/bin/{BuildConfiguration}/net6.0;
-                  {SolutionFolder}/Tests/StObjEngineTesting/Sample.Model/bin/{BuildConfiguration}/net6.0;
-                  {SolutionFolder}/Tests/StObjEngineTesting/Sample.Engine/bin/{BuildConfiguration}/net6.0
+           value="{SolutionFolder}/CK.StObj.Model/{PathToBin};
+                  {SolutionFolder}/CK.StObj.Runtime/{PathToBin};
+                  {SolutionFolder}/CK.StObj.Engine/{PathToBin};
+                  {SolutionFolder}/Tests/StObjEngineTesting/Sample.Model/{PathToBin};
+                  {SolutionFolder}/Tests/StObjEngineTesting/Sample.Engine/{PathToBin}
                   " />
     </appSettings>
 
