--- a/Tests/TestHelper.config
+++ b/Tests/TestHelper.config
@@ -1,9 +1,7 @@
 <configuration>
 
     <appSettings>
-      <add key="Monitor/LogToTextFile" value="true" />
-      <add key="Monitor/LogToConsole" value="false" />
-      <add key="Monitor/LogLevel" value="Debug" />
+      <add key="Monitor/LogToText" value="true" />
     </appSettings>
 
 </configuration>
