--- a/CK.StObj.Engine/CK.StObj.Engine.csproj
+++ b/CK.StObj.Engine/CK.StObj.Engine.csproj
@@ -15,7 +15,8 @@ This is a SetupDependency of CK.StObj.Runtime (that is itself a SetuoDependency 
   <ItemGroup>
     <ProjectReference Include="..\CK.StObj.Runtime\CK.StObj.Runtime.csproj" />
     <PackageReference Include="CK.CodeGen.Roslyn" Version="5.0.0" />
-    <PackageReference Include="CK.Core" Version="16.0.0" />
+    <!-- Temporary transitive dependency. -->
+    <PackageReference Include="CK.ActivityMonitor.SimpleSender" Version="16.0.1--0011-develop" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
