--- a/CK.StObj.Runtime/CK.StObj.Runtime.csproj
+++ b/CK.StObj.Runtime/CK.StObj.Runtime.csproj
@@ -17,6 +17,8 @@ This is a SetupDependency of CK.StObj.Model that is dynamically resolved by CKSe
     <PackageReference Include="CK.CodeGen" Version="5.0.0" />
     <PackageReference Include="CK.Reflection" Version="9.0.2" />
     <PackageReference Include="CK.Setup.Dependency" Version="13.0.0" />
+    <!-- Temporary transitive dependency. -->
+    <PackageReference Include="CK.ActivityMonitor.SimpleSender" Version="16.0.1--0011-develop" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
