--- a/CK.StObj.Model/CK.StObj.Model.csproj
+++ b/CK.StObj.Model/CK.StObj.Model.csproj
@@ -26,4 +26,7 @@
       <PackagePath>buildTransitive\CK.StObj.Model.targets</PackagePath>
     </Content>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Poco\PocoExchange\" />
+  </ItemGroup>
 </Project>
